syntax = "proto3";

package auth;
option go_package = "github.com/perfect1337/auth-service/proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}